Data Scientist at DocsApp .     Data Scientist - [Remote] - [Europe] at Crisp Inc. . Data Science Consultant - Experian Careers. DATA SCIENTIST - Luisa Via Roma spa - Career Page. Tonic App DATA SCIENTIST | SmartRecruiters. Bey (Permanent Job) Data Scientist with PHD, Quantitative Trading Algorithms - Accept Visa Candidates | SmartRecruiters. DATA SCIENTIST - GROUPE SEB Careers. Job Application for Data Scientist at LiveRamp. Job Application for Senior Data Scientist at Built In. Job Application for Senior Data Scientist at DRW . Data Analyst / Data Scientist | Internship | Tech-Savvy. 4Catalyzer Data Scientist | SmartRecruiters. Data Scientist - Momentum Solar - Career Page. Spry Squared, Inc. Data Scientist Manager | SmartRecruiters. Fanatics - Senior Data Scientist. Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science. Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science. Fanatics - Senior Data Scientist. Adam Kay Group Data Scientist | SmartRecruiters. Enterprise Account Exec- Data Science / ML -Paris - h2o.ai - Career Page. Enterprise Account Exec- Data Science / ML -London - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Toronto - h2o.ai - Career Page. Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Mid Atlantic (MA, DC, VA, PA) - h2o.ai - Career Page. Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds. Data Scientist - Apply online - Datatonic - Jobs. Jenzabar - Jobs: Data Scientist - Apply online. BL Consulting Co-op (Data Science & ML) - Nokia Careers. Job @ talpasolutions (Essen): Data Scientist | JOIN. Data Scientist - [Remote] - [United States] at Crisp Inc.. Data Scientist - [Remote] - [United States] at Crisp Inc.. Data Scientis

--- a/data-science.html
+++ b/data-science.html
@@ -81,6 +81,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
+<h5><a href='https://boards.greenhouse.io/builtin/jobs/1790213'>Job Application for Senior Data Scientist at Built In</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... We're looking for a Senior Data Scientist. You will help us lay the foundation of 
+our data science team. What machine learning algorithms should we be using?</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/drweng/jobs/1796522'>Job Application for Senior Data Scientist at DRW </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -118,7 +123,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692386002-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692386002-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, Georgia Atlanta</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -222,7 +227,7 @@ delivering actionable insights on crop health directly to the field meaning farm
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4300169002'>Job Application for Data Science - Internship/Working Student (m/f) at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4300169002'>Job Application for Data Science - Internship/Working Student (m/f) at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -255,7 +260,7 @@ have?...</p>
 <p>Jul 16, 2019 ... Expedia. We are looking for a Data Scientists to join our growing 20+ strong team
 . This position focuses on the measurement and optimization of advertising?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseware.workable.com/j/A0AF5CD597'>CaseWare - Jobs: Data Scientist x2 - Apply online</a></h5> 
+<h5><a href='https://caseware.workable.com/j/A0AF5CD597'>CaseWare - Jobs: Data Scientist x2 - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -313,7 +318,7 @@ have?...</p>
 <p>Jul 10, 2019 ... Senior Data Scientist - Operational Intelligence Platform. Los Gatos, California. 
 Streaming ? Platform Engineering. Full-time?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c/apply'>Tubular Labs - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tubularlabs/f05e4b8f-f0bd-4e85-b648-87603aeb322c/apply'>Tubular Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Self-identification of veteran status (Completion is voluntary and will not subject 
 you to adverse treatment). Tubular Labs is a Government contractor subject to?...</p>
@@ -322,7 +327,7 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oFmCafwx'>The Climate Corporation Careers - Data Scientist - Big Data</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -338,7 +343,7 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=914&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=0a680935-4fdc-4c29-a4ed-85ca736c456c'>Data Science Lead</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=914&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=0a680935-4fdc-4c29-a4ed-85ca736c456c'>Data Science Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -357,7 +362,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Data Scientist at CACI Ltd.</p>
 <hr/>
@@ -390,7 +395,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syone2.recruitee.com/o/ref-4742019-data-science-project-manager'>
+<h5><a href='https://syone2.recruitee.com/o/ref-4742019-data-science-project-manager'>
       (Ref. 474/2019) Data Science / Project Manager - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -430,11 +435,11 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/brex/jobs/4365077002'>Job Application for Data Scientist, Risk  at Brex</a></h5> 
+<h5><a href='https://boards.greenhouse.io/brex/jobs/4365077002'>Job Application for Data Scientist, Risk  at Brex</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/251352-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -460,7 +465,7 @@ your application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.
 <p>Jul 16, 2019 ... We are looking for a Data Scientist to develop a revenue generating, predictive, 
 intelligent, learning algorithm. The algorithm will ingest market analytics and?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53/apply'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/745a1f2e-5d05-4596-a16f-fb31df6c9f53/apply'>Shopify - Senior Data Scientist (multiple roles)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Senior Data Scientist (multiple roles). Ottawa, Canada. R&D ? Data Science & 
 Engineering. full-time. Submit your application. Resume/CV. ATTACH RESUME/
@@ -482,10 +487,6 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <h5><a href='https://aginic.workable.com/j/0B84C2EB04'>Aginic - Jobs: Data Analytics Consultant / Data Scientist (Melbourne) - Apply online</a></h5> 
 <p><span class="badge badge-light">Melbourne Melbourne Melbourne Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692210175-data-scientist-engineer'>Bosch Group Data Scientist Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-23</p>
 <hr/>
 
 
